[project]
name = "advanced-multi-agent-orchestrator"
version = "0.1.0"
description = "Starter project for a multi-agent AI orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "valorisa" }
]
keywords = ["multi-agent", "llm", "orchestration", "ai"]
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

